# qjs

./: Makefile.am  README.md  configure.ac  debugtest.js  q.js  qjs
src/: q.js
